After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753822 - assrender: do not crash when video frame mapping fails
assrender: do not crash when video frame mapping fails
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.5.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-19 12:56 UTC by Arnaud Vrac
Modified: 2015-08-28 18:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
check video frame mapping succeeded before blending (2.62 KB, patch)
2015-08-19 12:56 UTC, Arnaud Vrac
committed Details | Review

Description Arnaud Vrac 2015-08-19 12:56:38 UTC
Created attachment 309577 [details] [review]
check video frame mapping succeeded before blending

If the mapping fails just skip overlay rendering and push the video
frame downstream.
Comment 1 Sebastian Dröge (slomo) 2015-08-19 13:36:15 UTC
Review of attachment 309577 [details] [review]:

::: ext/assrender/gstassrender.c
@@ +1238,2 @@
       } else {
         GST_DEBUG_OBJECT (render, "nothing to render right now");

Here you should probably set render->composition to NULL. In the old code, if this case was reached no overlaying was happening. In your code, you would render whatever render->composition contains currently.
Comment 2 Arnaud Vrac 2015-08-19 13:46:48 UTC
render->composition is set to NULL when ass_image is NULL just above.
Comment 3 Sebastian Dröge (slomo) 2015-08-19 13:55:01 UTC
commit 6a884bf08d21921af5907249a72c9ea26e4fa8ea
Author: Arnaud Vrac <avrac@freebox.fr>
Date:   Thu Jan 31 14:03:40 2013 +0100

    assrender: check video frame mapping succeeded before blending
    
    If the mapping fails just skip overlay rendering and push the video
    frame downstream.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=753822